# SimpleNotes

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  conftest.py  main.py  pyproject.toml
.claude/: CLAUDE.md  PROJECT_STRUCTURE.md
.github/workflows/: ci.yml  e2e.yml
app/: config.py  database.py  models.py  templates_config.py  worker.py
app/ai/: router.py  service.py
app/auth/: profile_router.py  router.py  service.py  utils.py
app/integrations/: google.py  microsoft.py  panel_router.py  router.py
app/jobs/: broker.py  handlers.py  schemas.py
app/labels/: router.py  service.py
app/notes/: nlp_extractor.py  router.py  service.py  summary_service.py  task_service.py  tasks_router.py
app/preferences/: router.py  service.py
app/search/: embeddings.py  hybrid.py  meili.py  vector.py
app/templates/: base.html  forgot_password.html  index.html  login.html  register.html  reset_password.html  verify_email.html
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  nginx.conf
docs/: api.md  env.md  integrations.md  llm-config.md  setup.md
migrations/: env.py
static/: style.css
tests/: test_auth.py  test_labels.py  test_notes.py  test_notes_extra.py  test_profile.py  test_tasks_e2e.py
tests/e2e/: conftest.py  test_notes_ai.py  test_tasks_full.py
tests/integration/: conftest.py  test_ai.py  test_auth.py  test_labels.py  test_labels_extended.py  test_notes.py  test_notes_extended.py  test_preferences.py  test_profile.py  test_profile_extended.py  (+2 more)
(+25 files in other folders)
